--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script> 
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   
+  <link rel="shortcut icon" href="images/logo.ico"/>
 </head>
 <body>
   <div id="app"></div>
