--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">
   <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script> 
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/kammt/dis-troll.js@main/dis-troll.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/kammt/dis-troll.js/dis-troll.js"></script>
   
   <link rel="shortcut icon" href="images/favicon.ico"/>
 </head>
